tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/multiple-errors.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      scalar-size: 0
      extra: true
    }
  }
}
